package com.mikeescom.abstractfactorypattern;

public abstract class AbstractFactory {
    abstract Shape getShape(String shapeType) ;
}
