package com.mikeescom.abstractfactorypattern;

public interface Shape {
    void draw();
}
